# data_structure_c

./: .clang-format  .gitignore  README.md
lesson13/: CMakeLists.txt  Exception.cpp  main.cpp
lesson13/lib/: Exception.h  SmartPointer.h
lesson14/lib/: Object.cpp  Object.h
lesson15/: main.cpp
lesson16/: main.cpp
lesson16/lib/: List.h  SeqList.h
lesson17/: main.cpp
lesson17/lib/: StaticList.h
lesson19/: main.cpp
lesson19/lib/: SeqList.h
lesson20/: main.cpp
lesson20/lib/: Array.h  DynamicList.h
lesson21/: main.cpp
lesson21/lib/: DynamicArray.h  LinkList.h  List.h  StaticArray.h
lesson24/: main.cpp
lesson24/lib/: CMakeLists.txt  LinkList.h
lesson25/: main.cpp
lesson25/lib/: Exception.cpp  LinkList.h  List.h  SeqList.h  StaticLinkList.h
